fixed errors with test.